Fixed spacing/margins on Projects Page

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -22,7 +22,7 @@ h1 {
 
 h2 {
   font-weight: 100;
-  letter-spacing: .30em;
+  letter-spacing: .60em;
   color: #353535;
   font-family: Roboto-Thin;
 }
