--- a/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
+++ b/site/web/app/themes/sage/assets/styles/layouts/_pages.scss
@@ -17,8 +17,25 @@
   }
 }
 
+/* Project Page (Videos) */
 .video {
   margin-top: 50px;
+}
+
+.category-1 {
+  margin-top: 40px;
+}
+
+.category-2 {
+  margin-top: 40px;
+}
+
+.category-3 {
+  margin-top: 40px;
+}
+
+.wistia_playlist {
+  margin-top: 60px;
 }
 
 /* The Form is on section1, About, Projects and Contact pages */
